gcp/deployments/configs/inji-residentmobileapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: residentmobileapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /v1/mimoto/$2
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - DOMAIN
      secretName: DOMAIN-tls
  rules:
    - host: DOMAIN
      http:
        paths:
          - path: /residentmobileapp(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mimoto
                port:
                  number: 80
