gcp/deployments/configs/inji-residentmobileapp-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inji-residentmobileapp-virtualservice
  namespace: inji
spec:
  hosts:
    - DOMAIN
  gateways:
    - inji-gateway
  http:
    - match:
        - uri:
            regex: "/residentmobileapp(/|$)(.*)"
      route:
        - destination:
            host: mimoto
            port:
              number: 80
