gcp/deployments/configs/inji-verify-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inji-verify-virtualservice
spec:
  hosts:
    - DOMAIN
  gateways:
    - inji-verify-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: injiverify
            port:
              number: 80
