gcp/deployments/configs/inji-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: inji-virtualservices
spec:
  hosts:
    - DOMAIN
  gateways:
    - inji-verify-gateway
  http:
    - match:
        - uri:
            prefix: /v1/certify
      route:
        - destination:
            host: inji-certify
            port:
              number: 80
    - match:
        - uri:
            exact: /mimoto-issuers-config.json
      route:
        - destination:
            host: file-store
            port:
              number: 80
    - match:
        - uri:
            prefix: /v1/mimoto
      route:
        - destination:
            host: mimoto
            port:
              number: 80
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: injiweb
            port:
              number: 80
    - match:
        - uri:
            exact: /credential-template.html
      route:
        - destination:
            host: file-store
            port:
              number: 80
